--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -71,7 +71,9 @@ layout: default
               <div class="contact-note">
                 {{ site.contact_note }}
               </div>
-
+            <body>
+<script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=fc6eb4&w=300&t=tt&d=f_qpnIOaD-IyIu3n77YItgS5uYmUr9t_eCJL0r7o5DI&co=ffffff&ct=a39494&cmo=7a94e8&cmn=c90e75'></script>
+            </body>
             </div>
           {%- endif %}
         </article>
