--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -48,10 +48,10 @@ layout: default
             <!-- Selected papers -->
             {%- include selected_papers.html %}
           {%- endif %}
-          {%- if page.social %}
-            <body>
-             <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=f986d4&w=a&t=n&d=f_qpnIOaD-IyIu3n77YItgS5uYmUr9t_eCJL0r7o5DI&co=ffffff&cmo=8c9df2&cmn=c609b6&ct=808080'></script>
+                          <body>
+         <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=f986d4&w=263&t=n&d=f_qpnIOaD-IyIu3n77YItgS5uYmUr9t_eCJL0r7o5DI&co=ffffff&cmo=8c9df2&cmn=ba0eab&ct=808080'></script>
              </body>
+          {%- if page.social %}
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
