--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,35 +16,39 @@
     {%- include header.html %}
 
     <!-- Content -->
-    <div class="container mt-5">
-      {% if page.toc and page.toc.sidebar %}
-        {% if page.toc.sidebar == "right" %}
-        <div class="row">
-          <!-- main content area -->
-          <div class="col-sm-9">
-            {{ content }}
+    {% if layout.name == 'splash' %}
+      {{ content }}
+    {% else %}
+      <div class="container mt-5">
+        {% if page.toc and page.toc.sidebar %}
+          {% if page.toc.sidebar == "right" %}
+          <div class="row">
+            <!-- main content area -->
+            <div class="col-sm-9">
+              {{ content }}
+            </div>
+            <!-- sidebar, which will move to the top on a small screen -->
+            <div class="col-sm-3">
+              <nav id="toc-sidebar" class="sticky-top"></nav>
+            </div>
           </div>
-          <!-- sidebar, which will move to the top on a small screen -->
-          <div class="col-sm-3">
-            <nav id="toc-sidebar" class="sticky-top"></nav>
+          {% else %}
+          <div class="row">
+            <!-- sidebar, which will move to the top on a small screen -->
+            <div class="col-sm-3">
+              <nav id="toc-sidebar" class="sticky-top"></nav>
+            </div>
+            <!-- main content area -->
+            <div class="col-sm-9">
+              {{ content }}
+            </div>
           </div>
-        </div>
+          {% endif %}
         {% else %}
-        <div class="row">
-          <!-- sidebar, which will move to the top on a small screen -->
-          <div class="col-sm-3">
-            <nav id="toc-sidebar" class="sticky-top"></nav>
-          </div>
-          <!-- main content area -->
-          <div class="col-sm-9">
-            {{ content }}
-          </div>
-        </div>
+          {{ content }}
         {% endif %}
-      {% else %}
-        {{ content }}
-      {% endif %}
-    </div>
+      </div>
+    {% endif %}
 
     <!-- Footer -->
     {%- include footer.html %}
