--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,6 +1,6 @@
-<!-- _includes/custom-head.html -->
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.2/css/academicons.min.css">
-<!-- Import Google Fonts directly in the head for better cross-platform compatibility -->
+<!-- Google Fonts import -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
