--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -148,6 +148,7 @@ button, input, select, textarea {
   }
   
   .intro-text {
-    text-align: center;
+    text-align: left;
+    width: 100%;
   }
 }
