--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,7 @@
     {% include scripts/badges.html %}
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
+    {% include scripts/goatcounter.html %}
     {% include scripts/progressBar.html %}
   </body>
 </html>
