--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,5 +12,8 @@
 /* import your overrides */
 @import "custom";
 
+/* Visitor counter styles */
+@import "visitor_counter";
+
 /* Additional overrides */
 @import url("/assets/css/override.css");
